just about to start adding radio buttons for the questions

--- a/quiz.html
+++ b/quiz.html
@@ -8,9 +8,13 @@
 	<body>
 		<h1>Quiz Mania!</h1>
 
-		<div class="question">
+		<form class="question">
+		</form>
+
+		<div class="score">
 		</div>
 
+		
 		<button class="start">START!</button>
 		<button class="back">Back</button>
 		<button class="next">Next</button>
