implemented fadein/out of the questions, as well as score validation

--- a/quiz.html
+++ b/quiz.html
@@ -8,16 +8,16 @@
 	<body>
 		<h1>Quiz Mania!</h1>
 
-		<form class="question">
-		</form>
-
-		<div class="score">
+		<div class="question">
 		</div>
-
 		
 		<button class="start">START!</button>
 		<button class="back">Back</button>
 		<button class="next">Next</button>
+		
+		<div class="score">
+		</div>
+		<button class="restart">Play again?</button>
 		
 		<script type="text/javascript" src="assets/js/jquery-1.10.2.js"></script>
 		<script type="text/javascript" src="assets/js/quiz.js"></script>
