Changed name to quizzle

--- a/quiz.html
+++ b/quiz.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Quiz Mania</title>
+		<title>Quizzle</title>
 		<link rel="stylesheet" type="text/css" href="assets/styles/quiz.css">
 	</head>
 
 	<body>
-		<h1>Quiz Mania!</h1>
+		<h1>Quizzle</h1>
 
 		<div class="question">
 		</div>
